Fix mobile status view width overflow

--- a/src/components/StatusView/StatusView.scss
+++ b/src/components/StatusView/StatusView.scss
@@ -13,6 +13,8 @@
     overflow-y: auto;
     align-items: stretch;
     padding-bottom: 2em;
+    width: 100%;
+    box-sizing: border-box;
   }
 
   .status-column {
